--- a/src/pages/Home/Projects/Projects.css
+++ b/src/pages/Home/Projects/Projects.css
@@ -24,7 +24,7 @@
     padding: 22px 32px;
     border-color: #fff;
     cursor: pointer;
-    height: 500px;
+    height: 450px;
     
 }
 
@@ -34,7 +34,7 @@
 }
 .project-img img{
     width: 100%;
-    height: 300px;
+    /* height: 300px; */
     border-radius: 10px;
     box-shadow: 0px 5px 20px rgba(255, 255, 255, 0.5);
 }
@@ -44,9 +44,10 @@
 }
 .project-button{
     margin-top: 15px;
-    background-color: #00FFBB;
+    background-color:transparent;
+    border: 1px solid #00FFBB;
+    color: #00FFBB;
     padding: 10px 25px;
-    border: none;
     border-radius:8px;
     
 }
